# Dysgraphia_Processor_RU

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  Разметка_речи_с_авторазметкой.xlsx  дл.py
src/: config.py  evaluate_classification.py  export.py  main.py  requirements.txt
src/errors/: classifier.py  dysorthography.py  missing_word.py  phonetic.py  softness.py
src/language/: morph.py  reconstructor.py  vocabulary.py
src/text_analyzer/: analyzer.py  tokenizer.py
