# проверить версию поетри (если вторая версия, то обновить), какой модуль заворачивать в пакет (та папочка которая в срц), убрать лишние галочки и форматтеры, 

[tool.poetry]
name = "cv-dysgraphia"
version = "1.0.0"
description = "Rule-based dysgraphia error detection"
authors = ["Viacheslav Ugolnikov"]
readme = "README.md"
packages = [{ include = "src" }] # back-end....

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.10"
pymorphy2 = "0.9.1"
wordfreq = "3.0.3"
pandas = "2.2.0"

[tool.poetry.group.dev.dependencies]
# Linters 
ruff = "0.7.0"
types-requests = "*"
types-Pillow = "*"

# Formatters 
black = "^24.0.0"

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "TID"]
ignore = ["E501"]
line-length = 88

# Изолированные директорий
src = ["src"]
